feat: add api RenameHostById
